polkadot: wrapped token detection fixes

--- a/src/SelectAsset/SelectAsset.css
+++ b/src/SelectAsset/SelectAsset.css
@@ -10,6 +10,7 @@
   max-height: 200px;
   overflow: scroll;
   overflow-x: hidden;
+  display: flex;
   flex-wrap: wrap;
   padding-top: 16px;
 }
